@@ -31,6 +31,7 @@ Enhancements
  * debian support: arp binary location now configurable ([services].arp_binary)
  * log the switch IP when a trap is skipped due to a dynamic uplink fetch not working
  * performance improvements by reducing the number of forked process (mostly beneficial to pfdhcplistener)
+ * captive portal supports being behind an HTTP-based load balancer (see captive_portal.loadbalancers_ip config)
 
 Bug Fixes
  * Fix guest management Inline
